{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 2673,
  "lineage": "d94339b9-49d4-cb48-34c8-51771948d9bf",
  "resources": [
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ed233cad06001204",
            "arn": "arn:aws:ec2:us-west-2:311141558090:elastic-ip/eipalloc-0ed233cad06001204",
            "domain": "vpc",
            "id": "eipalloc-0ed233cad06001204",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-35-155-206-119.us-west-2.compute.amazonaws.com",
            "public_ip": "35.155.206.119",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_instance",
      "name": "server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-079467ea8dd191734",
            "arn": "arn:aws:ec2:us-west-2:311141558090:instance/i-0aa59edf7acd300af",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0aa59edf7acd300af",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-20240919040635971000000002",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-045125bf96bc66d5d"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-045125bf96bc66d5d",
            "private_dns": "ip-10-0-3-107.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.107",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0df11884d17b6b63e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07f7addfb9c923c72",
            "tags": {
              "Name": "Bastion Server"
            },
            "tags_all": {
              "Name": "Bastion Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0993eb02a4a94c987"
            ]
          },
          "dependencies": [
            "module.bastion.aws_key_pair.key_pair",
            "module.bastion.aws_network_interface.interface",
            "module.bastion.data.aws_ami.ami",
            "module.bastion.tls_private_key.rsa",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc",
            "module.securitygroup.module.alb_sg.aws_security_group.security_group",
            "module.securitygroup.module.bastion_sg.aws_security_group.security_group",
            "module.securitygroup.module.db_sg.aws_security_group.security_group",
            "module.securitygroup.module.web_sg.aws_security_group.security_group"
          ]
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:311141558090:network-interface/eni-045125bf96bc66d5d",
            "id": "eni-045125bf96bc66d5d",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:d5:94:7b:d9:bf",
            "owner_id": "311141558090",
            "private_dns_name": "ip-10-0-3-107.us-west-2.compute.internal",
            "private_ip": "10.0.3.107",
            "private_ip_list": [
              "10.0.3.107"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.3.107"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0993eb02a4a94c987"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07f7addfb9c923c72"
          },
          "dependencies": [
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc",
            "module.securitygroup.module.alb_sg.aws_security_group.security_group",
            "module.securitygroup.module.bastion_sg.aws_security_group.security_group",
            "module.securitygroup.module.db_sg.aws_security_group.security_group",
            "module.securitygroup.module.web_sg.aws_security_group.security_group"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:311141558090:loadbalancer/app/terraform-series/1f9dc643f02bb848",
            "arn_suffix": "app/terraform-series/1f9dc643f02bb848",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "terraform-series-607653826.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:311141558090:loadbalancer/app/terraform-series/1f9dc643f02bb848",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "terraform-series",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0a4bc4f4f15890bd6"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01a00e449d5165e74"
              },
              {
                "subnet_id": "subnet-07f7addfb9c923c72"
              }
            ],
            "subnets": [
              "subnet-01a00e449d5165e74",
              "subnet-07f7addfb9c923c72"
            ],
            "vpc_id": "vpc-048dc7bc4b9436f4e",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc",
            "module.securitygroup.module.alb_sg.aws_security_group.security_group",
            "module.securitygroup.module.bastion_sg.aws_security_group.security_group",
            "module.securitygroup.module.db_sg.aws_security_group.security_group",
            "module.securitygroup.module.web_sg.aws_security_group.security_group"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:311141558090:listener/app/terraform-series/1f9dc643f02bb848/ee46dca963a6aad6",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:311141558090:targetgroup/loadbalancer-tg/a801522f3b192565",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:311141558090:listener/app/terraform-series/1f9dc643f02bb848/ee46dca963a6aad6",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:311141558090:loadbalancer/app/terraform-series/1f9dc643f02bb848",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.loadbalancer.aws_lb.lb",
            "module.loadbalancer.aws_lb_target_group.lb_tg",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc",
            "module.securitygroup.module.alb_sg.aws_security_group.security_group",
            "module.securitygroup.module.bastion_sg.aws_security_group.security_group",
            "module.securitygroup.module.db_sg.aws_security_group.security_group",
            "module.securitygroup.module.web_sg.aws_security_group.security_group"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lb_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:311141558090:targetgroup/loadbalancer-tg/a801522f3b192565",
            "arn_suffix": "targetgroup/loadbalancer-tg/a801522f3b192565",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:311141558090:targetgroup/loadbalancer-tg/a801522f3b192565",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "loadbalancer-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-048dc7bc4b9436f4e"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "lb_tg_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:311141558090:targetgroup/loadbalancer-tg/a801522f3b192565-2024091904074215870000000e",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:311141558090:targetgroup/loadbalancer-tg/a801522f3b192565",
            "target_id": "i-05f601050ad601122"
          },
          "dependencies": [
            "module.loadbalancer.aws_lb_target_group.lb_tg",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_vpc.vpc",
            "module.securitygroup.module.alb_sg.aws_security_group.security_group",
            "module.securitygroup.module.bastion_sg.aws_security_group.security_group",
            "module.securitygroup.module.db_sg.aws_security_group.security_group",
            "module.securitygroup.module.web_sg.aws_security_group.security_group",
            "module.web_server.aws_instance.server",
            "module.web_server.aws_key_pair.key_pair",
            "module.web_server.aws_network_interface.interface",
            "module.web_server.data.aws_ami.ami",
            "module.web_server.tls_private_key.rsa"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c09597e0e7135c04",
            "arn": "arn:aws:ec2:us-west-2:311141558090:elastic-ip/eipalloc-0c09597e0e7135c04",
            "domain": "vpc",
            "id": "eipalloc-0c09597e0e7135c04",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-52-40-144-210.us-west-2.compute.amazonaws.com",
            "public_ip": "52.40.144.210",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:311141558090:internet-gateway/igw-0a850c1408344ddad",
            "id": "igw-0a850c1408344ddad",
            "owner_id": "311141558090",
            "vpc_id": "vpc-048dc7bc4b9436f4e"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c09597e0e7135c04",
            "association_id": "eipassoc-0af2d35da412cd23f",
            "connectivity_type": "public",
            "id": "nat-0a46050f3776135e4",
            "network_interface_id": "eni-0cce8bee7e67dbef5",
            "private_ip": "10.0.3.191",
            "public_ip": "52.40.144.210",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07f7addfb9c923c72"
          },
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.ig",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:311141558090:route-table/rtb-03f42d13743f42cf3",
            "id": "rtb-03f42d13743f42cf3",
            "owner_id": "311141558090",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0a46050f3776135e4",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-048dc7bc4b9436f4e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.ig",
            "module.networking.aws_nat_gateway.nat_gateway",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:311141558090:route-table/rtb-0418879ce10a3919c",
            "id": "rtb-0418879ce10a3919c",
            "owner_id": "311141558090",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a850c1408344ddad",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-048dc7bc4b9436f4e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.ig",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ef36150442dd070f",
            "route_table_id": "rtb-03f42d13743f42cf3",
            "subnet_id": "subnet-0a17afa3f66744fe7"
          },
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.ig",
            "module.networking.aws_nat_gateway.nat_gateway",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0555de2d225e123fe",
            "route_table_id": "rtb-03f42d13743f42cf3",
            "subnet_id": "subnet-0f4004abd5dba5a94"
          },
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.ig",
            "module.networking.aws_nat_gateway.nat_gateway",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ab7b76c7c453d51c",
            "route_table_id": "rtb-0418879ce10a3919c",
            "subnet_id": "subnet-07f7addfb9c923c72"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.ig",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e83e8f3109d2fed6",
            "route_table_id": "rtb-0418879ce10a3919c",
            "subnet_id": "subnet-01a00e449d5165e74"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.ig",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:311141558090:subnet/subnet-0a17afa3f66744fe7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a17afa3f66744fe7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "311141558090",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet"
            },
            "tags_all": {
              "Name": "Private Subnet"
            },
            "vpc_id": "vpc-048dc7bc4b9436f4e"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:311141558090:subnet/subnet-0f4004abd5dba5a94",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f4004abd5dba5a94",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "311141558090",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet"
            },
            "tags_all": {
              "Name": "Private Subnet"
            },
            "vpc_id": "vpc-048dc7bc4b9436f4e"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:311141558090:subnet/subnet-07f7addfb9c923c72",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07f7addfb9c923c72",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "311141558090",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet"
            },
            "tags_all": {
              "Name": "Public Subnet"
            },
            "vpc_id": "vpc-048dc7bc4b9436f4e"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:311141558090:subnet/subnet-01a00e449d5165e74",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01a00e449d5165e74",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "311141558090",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet"
            },
            "tags_all": {
              "Name": "Public Subnet"
            },
            "vpc_id": "vpc-048dc7bc4b9436f4e"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:311141558090:vpc/vpc-048dc7bc4b9436f4e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ca28e09a86ec4752",
            "default_route_table_id": "rtb-036ef7135199de97d",
            "default_security_group_id": "sg-0f3fc06f4bb3dbca3",
            "dhcp_options_id": "dopt-0f4e13223bb20b55b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-048dc7bc4b9436f4e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-036ef7135199de97d",
            "owner_id": "311141558090",
            "tags": {
              "Name": "My VPC"
            },
            "tags_all": {
              "Name": "My VPC"
            }
          }
        }
      ]
    },
    {
      "module": "module.securitygroup.module.alb_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:311141558090:security-group/sg-0a4bc4f4f15890bd6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a4bc4f4f15890bd6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "terraform-20240919040652145800000003",
            "name_prefix": "terraform-",
            "owner_id": "311141558090",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-048dc7bc4b9436f4e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.securitygroup.module.bastion_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:311141558090:security-group/sg-0993eb02a4a94c987",
            "description": "Allow SSH inbound connections",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0993eb02a4a94c987",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "terraform-20240919040652148000000004",
            "name_prefix": "terraform-",
            "owner_id": "311141558090",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-048dc7bc4b9436f4e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.securitygroup.module.db_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:311141558090:security-group/sg-026311d36271cce42",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-026311d36271cce42",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-015422ec79d48e7dc"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "terraform-20240919040700754600000008",
            "name_prefix": "terraform-",
            "owner_id": "311141558090",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-048dc7bc4b9436f4e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc",
            "module.securitygroup.module.alb_sg.aws_security_group.security_group",
            "module.securitygroup.module.bastion_sg.aws_security_group.security_group",
            "module.securitygroup.module.web_sg.aws_security_group.security_group"
          ]
        }
      ]
    },
    {
      "module": "module.securitygroup.module.web_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:311141558090:security-group/sg-015422ec79d48e7dc",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-015422ec79d48e7dc",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0993eb02a4a94c987"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a4bc4f4f15890bd6"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240919040656313300000007",
            "name_prefix": "terraform-",
            "owner_id": "311141558090",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-048dc7bc4b9436f4e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc",
            "module.securitygroup.module.alb_sg.aws_security_group.security_group",
            "module.securitygroup.module.bastion_sg.aws_security_group.security_group"
          ]
        }
      ]
    },
    {
      "module": "module.web_server",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cb103c8cd150f06b",
            "arn": "arn:aws:ec2:us-west-2:311141558090:elastic-ip/eipalloc-0cb103c8cd150f06b",
            "domain": "vpc",
            "id": "eipalloc-0cb103c8cd150f06b",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-34-214-75-76.us-west-2.compute.amazonaws.com",
            "public_ip": "34.214.75.76",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.web_server",
      "mode": "managed",
      "type": "aws_instance",
      "name": "server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-079467ea8dd191734",
            "arn": "arn:aws:ec2:us-west-2:311141558090:instance/i-05f601050ad601122",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05f601050ad601122",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-20240919040635971000000001",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-003bd3ac3aca96212"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-003bd3ac3aca96212",
            "private_dns": "ip-10-0-1-158.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.158",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ff651b2f6dff4482",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a17afa3f66744fe7",
            "tags": {
              "Name": "Web Server"
            },
            "tags_all": {
              "Name": "Web Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-015422ec79d48e7dc"
            ]
          },
          "dependencies": [
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_vpc.vpc",
            "module.securitygroup.module.alb_sg.aws_security_group.security_group",
            "module.securitygroup.module.bastion_sg.aws_security_group.security_group",
            "module.securitygroup.module.db_sg.aws_security_group.security_group",
            "module.securitygroup.module.web_sg.aws_security_group.security_group",
            "module.web_server.aws_key_pair.key_pair",
            "module.web_server.aws_network_interface.interface",
            "module.web_server.data.aws_ami.ami",
            "module.web_server.tls_private_key.rsa"
          ]
        }
      ]
    },
    {
      "module": "module.web_server",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:311141558090:network-interface/eni-003bd3ac3aca96212",
            "id": "eni-003bd3ac3aca96212",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:e4:61:c0:1f:63",
            "owner_id": "311141558090",
            "private_dns_name": "ip-10-0-1-158.us-west-2.compute.internal",
            "private_ip": "10.0.1.158",
            "private_ip_list": [
              "10.0.1.158"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.158"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-015422ec79d48e7dc"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a17afa3f66744fe7"
          },
          "dependencies": [
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_vpc.vpc",
            "module.securitygroup.module.alb_sg.aws_security_group.security_group",
            "module.securitygroup.module.bastion_sg.aws_security_group.security_group",
            "module.securitygroup.module.db_sg.aws_security_group.security_group",
            "module.securitygroup.module.web_sg.aws_security_group.security_group"
          ]
        }
      ]
    }
  ]
}